--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
     "name": "acf"
-  , "version": "0.0.1"
+  , "version": "0.1.0"
   , "author": "Fossil Jue <imzshh@gmail.com>"
   , "main": "lib/acf.js"
   , "dependencies": {
       "coffee-script": ">= 1.3.3"
     , "mongoskin": ">= 0.3.3"
-    , "j3": ">= 0.0.2"
+    , "j3": "= 0.2.0"
     , "async": ">= 0.1.22"
   }
   , "devDependencies" : {
-      "packflow" : ">= 0.0.1"
+      "packflow" : "= 0.1.0"
   }
 }
